force-app/main/default/objects/DNA_Connect_Credential__mdt/DNA_Connect_Credential__mdt.object-meta.xml
<CustomObject>
    <label>DNA Connect Credential</label>
    <pluralLabel>DNA Connect Credentials</pluralLabel>
</CustomObject>