force-app/main/default/objects/DNA_Connect_Credential__mdt/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <label>Port</label>
    <length>6</length>
    <type>Text</type>
</CustomField>